@@ -32,6 +32,9 @@ public:
   virtual void identify();
   virtual void create_packetizer(int64_t tid);
   virtual int get_progress();
+  virtual bool is_simple_subtitle_container() {
+    return true;
+  }
 
   static int probe_file(mm_text_io_c *io, uint64_t size);
 };
